@@ -1,22 +1,30 @@
 /*
- * SelectAbilitiesDialog.java
- *
  * Copyright (c) 2009 Jay Lawson (jaylawson39 at yahoo.com). All rights reserved.
+ * Copyright (C) 2014-2025 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MekHQ.
  *
  * MekHQ is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
+ * it under the terms of the GNU General Public License (GPL),
+ * version 3 or (at your option) any later version,
+ * as published by the Free Software Foundation.
  *
  * MekHQ is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- * GNU General Public License for more details.
+ * but WITHOUT ANY WARRANTY; without even the implied warranty
+ * of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
- * along with MekHQ. If not, see <http://www.gnu.org/licenses/>.
+ * A copy of the GPL should have been included with this project;
+ * if not, see <https://www.gnu.org/licenses/>.
+ *
+ * NOTICE: The MegaMek organization is a non-profit group of volunteers
+ * creating free software for the BattleTech community.
+ *
+ * MechWarrior, BattleMech, `Mech and AeroTech are registered trademarks
+ * of The Topps Company, Inc. All Rights Reserved.
+ *
+ * Catalyst Game Labs and the Catalyst Game Labs logo are trademarks of
+ * InMediaRes Productions, LLC.
  */
 package mekhq.gui.dialog;
 
@@ -26,8 +34,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Vector;
-import java.util.stream.Collectors;
-
 import javax.swing.JButton;
 import javax.swing.JCheckBox;
 import javax.swing.JDialog;
@@ -48,19 +54,19 @@ import mekhq.campaign.personnel.SpecialAbility;
 public class SelectAbilitiesDialog extends JDialog {
     private static final MMLogger logger = MMLogger.create(SelectAbilitiesDialog.class);
 
-    private JButton btnClose;
-    private JButton btnOK;
-    private List<JCheckBox> chkAbil;
-    private Vector<String> selected;
-    private List<String> spaNames;
-    private boolean cancelled;
+    private JButton         btnClose;
+    private JButton         btnOK;
+    private List<JCheckBox> chkAbility;
+    private Vector<String>  selected;
+    private List<String>    spaNames;
+    private boolean         cancelled;
 
     private Map<String, SpecialAbility> allSPA;
 
     public SelectAbilitiesDialog(JFrame parent, Vector<String> s, Map<String, SpecialAbility> hash) {
         super(parent, true);
-        selected = s;
-        allSPA = hash;
+        selected  = s;
+        allSPA    = hash;
         cancelled = false;
         initComponents();
         setLocationRelativeTo(parent);
@@ -68,23 +74,25 @@ public class SelectAbilitiesDialog extends JDialog {
     }
 
     private void initComponents() {
-        btnOK = new JButton();
+        btnOK    = new JButton();
         btnClose = new JButton();
 
-        chkAbil = new ArrayList<>();
-        spaNames = new ArrayList<>();
+        chkAbility = new ArrayList<>();
+        spaNames   = new ArrayList<>();
 
         JPanel panMain = new JPanel(new GridLayout(0, 3));
 
         JCheckBox chk;
-        for (final SpecialAbility spa : allSPA.values().stream()
-                .sorted((a, b) -> new NaturalOrderComparator().compare(a.getDisplayName(), b.getDisplayName()))
-                .collect(Collectors.toList())) {
+        for (final SpecialAbility spa : allSPA.values()
+                                              .stream()
+                                              .sorted((a, b) -> new NaturalOrderComparator().compare(a.getDisplayName(),
+                                                    b.getDisplayName()))
+                                              .toList()) {
             chk = new JCheckBox(spa.getDisplayName());
             if (selected.contains(spa.getName())) {
                 chk.setSelected(true);
             }
-            chkAbil.add(chk);
+            chkAbility.add(chk);
             panMain.add(chk);
             spaNames.add(spa.getName());
         }
@@ -109,7 +117,13 @@ public class SelectAbilitiesDialog extends JDialog {
         pack();
     }
 
-    @Deprecated // These need to be migrated to the Suite Constants / Suite Options Setup
+    /**
+     * These need to be migrated to the Suite Constants / Suite Options Setup
+     *
+     * @since 0.50.04
+     * @deprecated Move to Suite Constants / Suite Options Setup
+     */
+    @Deprecated(since = "0.50.04")
     private void setUserPreferences() {
         try {
             PreferencesNode preferences = MekHQ.getMHQPreferences().forClass(SelectAbilitiesDialog.class);
@@ -123,7 +137,7 @@ public class SelectAbilitiesDialog extends JDialog {
     private void done() {
         selected = new Vector<>();
         for (int i = 0; i < spaNames.size(); i++) {
-            if (chkAbil.get(i).isSelected()) {
+            if (chkAbility.get(i).isSelected()) {
                 selected.add(spaNames.get(i));
             }
         }
